Switch Virtual thread for Platform thread